@@ -29,17 +29,15 @@ package org.hisp.dhis.tracker.imports.validation.validator.event;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
+import static org.hisp.dhis.test.utils.Assertions.assertIsEmpty;
 import static org.hisp.dhis.tracker.imports.validation.ValidationCode.E1119;
 import static org.hisp.dhis.tracker.imports.validation.validator.AssertValidations.assertHasWarning;
-import static org.hisp.dhis.utils.Assertions.assertIsEmpty;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import org.hisp.dhis.random.BeanRandomizer;
+import org.hisp.dhis.test.random.BeanRandomizer;
 import org.hisp.dhis.tracker.imports.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.imports.domain.Event;
@@ -87,7 +85,7 @@ class NoteValidatorTest {
   void testNoteWithExistingUidWarnings() {
     // Given
     final Note note = rnd.nextObject(Note.class);
-    when(preheat.getNote(note.getNote())).thenReturn(Optional.of(new org.hisp.dhis.note.Note()));
+    when(preheat.hasNote(note.getNote())).thenReturn(true);
 
     event.setNotes(Collections.singletonList(note));
 
@@ -118,7 +116,7 @@ class NoteValidatorTest {
   @Test
   void testNotesAreValidWhenUidDoesNotExist() {
     // Given
-    final List<Note> notes = rnd.objects(Note.class, 5).collect(Collectors.toList());
+    final List<Note> notes = rnd.objects(Note.class, 5).toList();
 
     event.setNotes(notes);
 
