@@ -30,9 +30,9 @@ package org.hisp.dhis.tracker.export;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.ACCESSIBLE;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.DESCENDANTS;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.SELECTED;
+import static org.hisp.dhis.test.utils.Assertions.assertContainsOnly;
+import static org.hisp.dhis.test.utils.Assertions.assertIsEmpty;
 import static org.hisp.dhis.tracker.Assertions.assertNoErrors;
-import static org.hisp.dhis.utils.Assertions.assertContainsOnly;
-import static org.hisp.dhis.utils.Assertions.assertIsEmpty;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -42,8 +42,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.hisp.dhis.common.BaseIdentifiableObject;
 import org.hisp.dhis.common.IdentifiableObject;
@@ -78,7 +76,7 @@ import org.hisp.dhis.tracker.export.trackedentity.TrackedEntityService;
 import org.hisp.dhis.tracker.imports.TrackerImportParams;
 import org.hisp.dhis.tracker.imports.TrackerImportService;
 import org.hisp.dhis.user.User;
-import org.hisp.dhis.user.UserService;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -111,14 +109,14 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   private User importUser;
 
-  @Autowired protected UserService _userService;
-
-  @Override
-  protected void initTest() throws IOException {
-    userService = _userService;
+  @BeforeAll
+  void setUp() throws IOException {
     setUpMetadata("tracker/simple_metadata.json");
-    importUser = userService.getUser("M5zQapPyTZI");
-    TrackerImportParams params = TrackerImportParams.builder().userId(importUser.getUid()).build();
+
+    importUser = userService.getUser("tTgjgobT1oS");
+    injectSecurityContextUser(importUser);
+
+    TrackerImportParams params = TrackerImportParams.builder().build();
     assertNoErrors(
         trackerImportService.importTracker(params, fromJson("tracker/event_and_enrollment.json")));
     orgUnit = get(OrganisationUnit.class, "h4w96yEMlzO");
@@ -130,10 +128,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @BeforeEach
-  void setUp() {
+  void setUpUserAndParams() {
     // needed as some tests are run using another user (injectSecurityContext) while most tests
-    // expect to be run by admin
-    injectAdminUser();
+    // expect to be run by the importUser
+    injectSecurityContextUser(importUser);
 
     eventParamsBuilder = EventOperationParams.builder().eventParams(EventParams.FALSE);
     eventParamsBuilder.orgUnitMode(SELECTED);
@@ -144,10 +142,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(DESCENDANTS)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("numericAttr"), SortDirection.ASC)
             .build();
 
@@ -180,10 +177,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(DESCENDANTS)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("numericAttr"), SortDirection.ASC)
             .build();
 
@@ -224,11 +220,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .build();
 
     List<String> trackedEntities = getTrackedEntities(params);
@@ -244,11 +239,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("created", SortDirection.ASC)
             .build();
 
@@ -277,11 +271,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("created", SortDirection.DESC)
             .build();
 
@@ -307,11 +300,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
@@ -325,11 +317,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("createdAtClient", SortDirection.ASC)
             .build();
 
@@ -343,11 +334,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("enrollment.enrollmentDate", SortDirection.ASC)
             .build();
 
@@ -361,11 +351,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .build();
 
@@ -382,12 +371,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .programUid("BFcipDERJnf")
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
+            .program(UID.of("BFcipDERJnf"))
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .build();
 
@@ -401,11 +389,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toDelete000"), SortDirection.ASC)
             .orderBy("enrollment.enrollmentDate", SortDirection.ASC)
             .build();
@@ -420,11 +407,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
 
@@ -438,11 +424,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
 
@@ -456,12 +441,12 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
-            .filters(Map.of("numericAttr", List.of(new QueryFilter(QueryOperator.LT, "75"))))
+            .filters(
+                Map.of(UID.of("numericAttr"), List.of(new QueryFilter(QueryOperator.LT, "75"))))
             .build();
 
     List<String> trackedEntities = getTrackedEntities(params);
@@ -474,11 +459,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
-            .filters(Map.of("numericAttr", List.of(new QueryFilter(QueryOperator.LT, "75"))))
+            .trackedEntityType(trackedEntityType)
+            .filters(
+                Map.of(UID.of("numericAttr"), List.of(new QueryFilter(QueryOperator.LT, "75"))))
             .orderBy(UID.of("numericAttr"), SortDirection.DESC)
             .build();
 
@@ -492,13 +477,12 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .trackedEntityUids(
-                Set.of(
+            .trackedEntityType(trackedEntityType)
+            .trackedEntities(
+                UID.of(
                     "dUE514NMOlo", "QS6w44flWAf")) // TE QS6w44flWAf without attribute notUpdated0
-            .user(importUser)
             .orderBy(UID.of("notUpdated0"), SortDirection.DESC)
             .build();
 
@@ -515,11 +499,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("numericAttr"), SortDirection.ASC)
             .build();
@@ -534,11 +517,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("numericAttr"), SortDirection.DESC)
             .build();
@@ -554,11 +536,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("inactive", SortDirection.DESC)
             .build();
 
@@ -573,11 +554,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .user(importUser)
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("inactive", SortDirection.ASC)
             .build();
 
@@ -591,7 +571,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams operationParams =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.ASC)
             .build();
@@ -623,7 +603,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams operationParams =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.ASC)
             .build();
@@ -662,10 +642,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
             .toList();
 
     EnrollmentOperationParams params =
-        EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
-            .orgUnitMode(SELECTED)
-            .build();
+        EnrollmentOperationParams.builder().orgUnits(orgUnit).orgUnitMode(SELECTED).build();
 
     List<String> enrollments = getEnrollments(params);
 
@@ -676,7 +653,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEnrollmentsByEnrolledAtAsc() throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams params =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.ASC)
             .build();
@@ -690,7 +667,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEnrollmentsByEnrolledAtDesc() throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams params =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.DESC)
             .build();
@@ -705,8 +682,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .events(Set.of("pTzf9KYMk72", "D9PbzJY8bJM"))
+            .orgUnit(orgUnit)
+            .events(UID.of("pTzf9KYMk72", "D9PbzJY8bJM"))
             .orderBy("occurredDate", SortDirection.DESC)
             .build();
 
@@ -730,10 +707,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @Test
   void shouldReturnPaginatedEventsWithTotalPages() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
-            .build();
+        eventParamsBuilder.orgUnit(orgUnit).programStage(programStage).build();
 
     Page<Event> page = eventService.getEvents(params, new PageParams(1, 2, true));
 
@@ -751,8 +725,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programUid(program.getUid())
+            .orgUnit(orgUnit)
+            .program(program)
             .orderBy("occurredDate", SortDirection.DESC)
             .build();
 
@@ -781,8 +755,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programUid(program.getUid())
+            .orgUnit(orgUnit)
+            .program(program)
             .orderBy("occurredDate", SortDirection.DESC)
             .build();
 
@@ -804,7 +778,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
             .map(Event::getUid)
             .toList();
 
-    EventOperationParams params = eventParamsBuilder.orgUnitUid(orgUnit.getUid()).build();
+    EventOperationParams params = eventParamsBuilder.orgUnit(orgUnit).build();
 
     List<String> events = getEvents(params);
 
@@ -826,7 +800,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     EventOperationParams params =
         eventParamsBuilder
             .orgUnitMode(ACCESSIBLE)
-            .events(Set.of("pTzf9KYMk72", "QRYjLTiJTrA"))
+            .events(UID.of("pTzf9KYMk72", "QRYjLTiJTrA"))
             .orderBy("enrollment.program.uid", SortDirection.ASC)
             .build();
 
@@ -853,7 +827,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     EventOperationParams params =
         eventParamsBuilder
             .orgUnitMode(ACCESSIBLE)
-            .events(Set.of("pTzf9KYMk72", "QRYjLTiJTrA"))
+            .events(UID.of("pTzf9KYMk72", "QRYjLTiJTrA"))
             .orderBy("enrollment.program.uid", SortDirection.DESC)
             .build();
 
@@ -866,7 +840,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByAttributeAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
 
@@ -879,7 +853,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByAttributeDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
 
@@ -893,9 +867,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .events(
-                Set.of(
+                UID.of(
                     "pTzf9KYMk72",
                     "D9PbzJY8bJM")) // EV pTzf9KYMk72 => TE QS6w44flWAf without attribute
             // notUpdated0
@@ -911,7 +885,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByMultipleAttributesDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
@@ -925,7 +899,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByMultipleAttributesAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
@@ -934,9 +908,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     assertEquals(List.of("D9PbzJY8bJM", "pTzf9KYMk72"), uids(events));
     List<String> trackedEntities =
-        events.stream()
-            .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+        events.stream().map(event -> event.getEnrollment().getTrackedEntity().getUid()).toList();
     assertEquals(List.of("dUE514NMOlo", "QS6w44flWAf"), trackedEntities);
   }
 
@@ -945,7 +917,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
@@ -971,7 +943,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByProgramStageUidDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("uoNW0E3xXUy")
+            .orgUnit(UID.of("uoNW0E3xXUy"))
             .orderBy("programStage.uid", SortDirection.DESC)
             .build();
 
@@ -984,7 +956,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByProgramStageUidAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("uoNW0E3xXUy")
+            .orgUnit(UID.of("uoNW0E3xXUy"))
             .orderBy("programStage.uid", SortDirection.ASC)
             .build();
 
@@ -997,7 +969,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByTrackedEntityUidDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.trackedEntity.uid", SortDirection.DESC)
             .build();
 
@@ -1010,7 +982,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   void shouldOrderEventsByTrackedEntityUidAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.trackedEntity.uid", SortDirection.ASC)
             .build();
 
@@ -1024,8 +996,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
-            .events(Set.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
+            .orgUnit(UID.of("DiszpKrYNg8"))
+            .events(UID.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
             .orderBy("attributeOptionCombo.uid", SortDirection.DESC)
             .build();
 
@@ -1039,8 +1011,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
-            .events(Set.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
+            .orgUnit(UID.of("DiszpKrYNg8"))
+            .events(UID.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
             .orderBy("attributeOptionCombo.uid", SortDirection.ASC)
             .build();
 
@@ -1052,10 +1024,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @Test
   void shouldOrderEventsByOccurredAtDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .orderBy("occurredDate", SortDirection.DESC)
-            .build();
+        eventParamsBuilder.orgUnit(orgUnit).orderBy("occurredDate", SortDirection.DESC).build();
 
     List<String> events = getEvents(params);
 
@@ -1065,10 +1034,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @Test
   void shouldOrderEventsByOccurredAtAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .orderBy("occurredDate", SortDirection.ASC)
-            .build();
+        eventParamsBuilder.orgUnit(orgUnit).orderBy("occurredDate", SortDirection.ASC).build();
 
     List<String> events = getEvents(params);
 
@@ -1080,8 +1046,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("createdAtClient", SortDirection.ASC)
             .build();
 
@@ -1095,8 +1061,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
@@ -1110,8 +1076,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("lastUpdatedAtClient", SortDirection.ASC)
             .build();
 
@@ -1125,8 +1091,8 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("lastUpdatedAtClient", SortDirection.DESC)
             .build();
 
@@ -1140,7 +1106,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .orderBy("enrollment.enrollmentDate", SortDirection.ASC)
             .build();
@@ -1155,7 +1121,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
@@ -1170,7 +1136,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("scheduledDate", SortDirection.DESC)
             .orderBy(UID.of("DATAEL00006"), SortDirection.DESC)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
@@ -1186,7 +1152,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .orderBy(UID.of("DATAEL00006"), SortDirection.DESC)
             .build();
@@ -1201,9 +1167,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .events(
-                Set.of(
+                UID.of(
                     "pTzf9KYMk72", // EV pTzf9KYMk72 without data element DATAEL00002
                     "D9PbzJY8bJM"))
             // notUpdated0
@@ -1241,7 +1207,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(SELECTED);
-    eventParamsBuilder.orgUnitUid(orgUnit.getUid());
+    eventParamsBuilder.orgUnit(orgUnit);
     eventParamsBuilder.orderBy(field, SortDirection.DESC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1255,7 +1221,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(SELECTED);
-    eventParamsBuilder.orgUnitUid(orgUnit.getUid());
+    eventParamsBuilder.orgUnit(orgUnit);
     eventParamsBuilder.orderBy(field, SortDirection.ASC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1287,7 +1253,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(DESCENDANTS);
-    eventParamsBuilder.orgUnitUid("RojfDTBhoGC");
+    eventParamsBuilder.orgUnit(UID.of("RojfDTBhoGC"));
     eventParamsBuilder.orderBy(field, SortDirection.DESC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1301,7 +1267,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(DESCENDANTS);
-    eventParamsBuilder.orgUnitUid("RojfDTBhoGC");
+    eventParamsBuilder.orgUnit(UID.of("RojfDTBhoGC"));
     eventParamsBuilder.orderBy(field, SortDirection.ASC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1310,7 +1276,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderRelationshipsByPrimaryKeyDescByDefault()
-      throws ForbiddenException, NotFoundException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
     Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
     List<String> expected =
@@ -1322,7 +1288,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .build();
 
     List<String> relationships = getRelationships(params);
@@ -1332,11 +1298,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderRelationshipsByUpdatedAtClientInDescOrder()
-      throws ForbiddenException, NotFoundException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
@@ -1347,11 +1313,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderRelationshipsByUpdatedAtClientInAscOrder()
-      throws ForbiddenException, NotFoundException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .orderBy("createdAtClient", SortDirection.ASC)
             .build();
 
@@ -1362,7 +1328,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnPaginatedRelationshipsGivenNonDefaultPageSize()
-      throws ForbiddenException, NotFoundException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     // relationships can only be ordered by created date which is not under our control during
     // testing
     // pagination is tested using default order by primary key desc. We thus need to get the
@@ -1380,7 +1346,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .build();
 
     Page<Relationship> firstPage =
@@ -1407,7 +1373,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnPaginatedRelationshipsGivenNonDefaultPageSizeAndTotalPages()
-      throws ForbiddenException, NotFoundException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     // relationships can only be ordered by created date which is not under our control during
     // testing
     // pagination is tested using default order by primary key desc. We thus need to get the
@@ -1425,7 +1391,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .build();
 
     Page<Relationship> firstPage =
@@ -1451,14 +1417,15 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderRelationshipsByCreatedAsc() throws ForbiddenException, NotFoundException {
+  void shouldOrderRelationshipsByCreatedAsc()
+      throws ForbiddenException, BadRequestException, NotFoundException {
     Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
     Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
 
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .orderBy("created", SortDirection.ASC)
             .build();
 
@@ -1480,14 +1447,15 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderRelationshipsByCreatedDesc() throws ForbiddenException, NotFoundException {
+  void shouldOrderRelationshipsByCreatedDesc()
+      throws ForbiddenException, BadRequestException, NotFoundException {
     Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
     Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
 
     RelationshipOperationParams params =
         RelationshipOperationParams.builder()
             .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+            .identifier(UID.of("pTzf9KYMk72"))
             .orderBy("created", SortDirection.DESC)
             .build();
 
@@ -1556,7 +1524,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   private List<String> getRelationships(RelationshipOperationParams params)
-      throws ForbiddenException, NotFoundException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     return uids(relationshipService.getRelationships(params));
   }
 
