@@ -29,13 +29,13 @@ package org.hisp.dhis.tracker.export.event;
 
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.ACCESSIBLE;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.SELECTED;
+import static org.hisp.dhis.test.utils.Assertions.assertContains;
+import static org.hisp.dhis.test.utils.Assertions.assertContainsOnly;
+import static org.hisp.dhis.test.utils.Assertions.assertIsEmpty;
+import static org.hisp.dhis.test.utils.Assertions.assertStartsWith;
 import static org.hisp.dhis.tracker.Assertions.assertHasTimeStamp;
 import static org.hisp.dhis.tracker.Assertions.assertNoErrors;
 import static org.hisp.dhis.util.DateUtils.parseDate;
-import static org.hisp.dhis.utils.Assertions.assertContains;
-import static org.hisp.dhis.utils.Assertions.assertContainsOnly;
-import static org.hisp.dhis.utils.Assertions.assertIsEmpty;
-import static org.hisp.dhis.utils.Assertions.assertStartsWith;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -48,6 +48,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.hisp.dhis.category.CategoryOption;
 import org.hisp.dhis.common.BaseIdentifiableObject;
@@ -57,6 +58,7 @@ import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.QueryFilter;
 import org.hisp.dhis.common.QueryItem;
 import org.hisp.dhis.common.QueryOperator;
+import org.hisp.dhis.common.UID;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.dataelement.DataElementService;
 import org.hisp.dhis.feedback.BadRequestException;
@@ -75,8 +77,8 @@ import org.hisp.dhis.tracker.TrackerTest;
 import org.hisp.dhis.tracker.imports.TrackerImportParams;
 import org.hisp.dhis.tracker.imports.TrackerImportService;
 import org.hisp.dhis.user.User;
-import org.hisp.dhis.user.UserService;
 import org.hisp.dhis.util.DateUtils;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
@@ -106,14 +108,14 @@ class EventExporterTest extends TrackerTest {
 
   private EventOperationParams.EventOperationParamsBuilder operationParamsBuilder;
 
-  @Autowired protected UserService _userService;
-
-  @Override
-  protected void initTest() throws IOException {
-    userService = _userService;
+  @BeforeAll
+  void setUp() throws IOException {
     setUpMetadata("tracker/simple_metadata.json");
-    importUser = userService.getUser("M5zQapPyTZI");
-    TrackerImportParams params = TrackerImportParams.builder().userId(importUser.getUid()).build();
+
+    importUser = userService.getUser("tTgjgobT1oS");
+    injectSecurityContextUser(importUser);
+
+    TrackerImportParams params = TrackerImportParams.builder().build();
     assertNoErrors(
         trackerImportService.importTracker(params, fromJson("tracker/event_and_enrollment.json")));
     orgUnit = get(OrganisationUnit.class, "h4w96yEMlzO");
@@ -129,13 +131,13 @@ class EventExporterTest extends TrackerTest {
   }
 
   @BeforeEach
-  void setUp() {
+  void setUpUserAndParams() {
     // needed as some tests are run using another user (injectSecurityContext) while most tests
-    // expect to be run by admin
-    injectAdminUser();
+    // expect to be run by the importUser
+    injectSecurityContextUser(importUser);
 
     operationParamsBuilder = EventOperationParams.builder().eventParams(EventParams.FALSE);
-    operationParamsBuilder.orgUnitUid(orgUnit.getUid()).orgUnitMode(SELECTED);
+    operationParamsBuilder.orgUnit(orgUnit).orgUnitMode(SELECTED);
   }
 
   @Test
@@ -143,8 +145,8 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .trackedEntityUid(trackedEntity.getUid())
-            .enrollments(Set.of("TvctPPhpD8z"))
+            .trackedEntity(trackedEntity)
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -156,7 +158,10 @@ class EventExporterTest extends TrackerTest {
   @Test
   void shouldReturnEventsWithRelationships() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        operationParamsBuilder.events(Set.of("pTzf9KYMk72")).eventParams(EventParams.TRUE).build();
+        operationParamsBuilder
+            .events(Set.of(UID.of("pTzf9KYMk72")))
+            .eventParams(EventParams.TRUE)
+            .build();
 
     List<Event> events = eventService.getEvents(params);
 
@@ -170,22 +175,19 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnEventsWithNotes() throws ForbiddenException, BadRequestException {
-    EventOperationParams params = operationParamsBuilder.events(Set.of("pTzf9KYMk72")).build();
+    Event pTzf9KYMk72 = get(Event.class, "pTzf9KYMk72");
+    EventOperationParams params =
+        operationParamsBuilder.events(Set.of(UID.of("pTzf9KYMk72"))).build();
 
     List<Event> events = eventService.getEvents(params);
 
     assertContainsOnly(List.of("pTzf9KYMk72"), uids(events));
-    List<Note> notes = events.get(0).getNotes();
-    assertContainsOnly(List.of("SGuCABkhpgn", "DRKO4xUVrpr"), uids(notes));
-    assertAll(
-        () -> assertNote(importUser, "comment value", notes.get(0)),
-        () -> assertNote(importUser, "comment value", notes.get(1)));
+    assertNotes(pTzf9KYMk72.getNotes(), events.get(0).getNotes());
   }
 
   @Test
   void testExportEvents() throws ForbiddenException, BadRequestException {
-    EventOperationParams params =
-        operationParamsBuilder.programStageUid(programStage.getUid()).build();
+    EventOperationParams params = operationParamsBuilder.programStage(programStage).build();
 
     List<String> events = getEvents(params);
 
@@ -196,8 +198,8 @@ class EventExporterTest extends TrackerTest {
   void testExportEventsWhenFilteringByEnrollment() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .trackedEntityUid(trackedEntity.getUid())
-            .enrollments(Set.of("TvctPPhpD8z"))
+            .trackedEntity(trackedEntity)
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
             .build();
 
     List<String> events = getEvents(params);
@@ -210,8 +212,8 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
             .occurredAfter(getDate(2018, 1, 1))
             .occurredBefore(getDate(2020, 1, 29))
             .skipChangedBefore(getDate(2018, 1, 1))
@@ -226,8 +228,8 @@ class EventExporterTest extends TrackerTest {
   void testExportEventsWithLastUpdateDuration() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
             .updatedWithin("1d")
             .build();
 
@@ -241,8 +243,8 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
             .occurredBefore(Date.from(getDate(2020, 1, 28).toInstant().plus(1, ChronoUnit.HOURS)))
             .occurredAfter(Date.from(getDate(2020, 1, 28).toInstant().minus(1, ChronoUnit.HOURS)))
             .build();
@@ -257,8 +259,8 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
             .occurredBefore(getDate(2020, 1, 28))
             .build();
 
@@ -272,8 +274,8 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
             .occurredAfter(getDate(2020, 1, 28))
             .build();
 
@@ -287,8 +289,8 @@ class EventExporterTest extends TrackerTest {
     Date date = new Date();
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
             .updatedAfter(
                 Date.from(
                     date.toInstant()
@@ -312,7 +314,10 @@ class EventExporterTest extends TrackerTest {
   void testExportEventsWithDatesIncludingTimeStamp()
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        operationParamsBuilder.orgUnitMode(ACCESSIBLE).events(Set.of("pTzf9KYMk72")).build();
+        operationParamsBuilder
+            .orgUnitMode(ACCESSIBLE)
+            .events(Set.of(UID.of("pTzf9KYMk72")))
+            .build();
 
     List<Event> events = eventService.getEvents(params);
 
@@ -342,13 +347,13 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsLike()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00001");
+    DataElement dataElement = dataElement(UID.of("DATAEL00001"));
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
             .dataElementFilters(
-                Map.of("DATAEL00001", List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
+                Map.of(UID.of(dataElement), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -361,15 +366,15 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsWithStatusFilter()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00001");
+    DataElement dataElement = dataElement(UID.of("DATAEL00001"));
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
             .enrollmentStatus(EnrollmentStatus.ACTIVE)
             .dataElementFilters(
-                Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
+                Map.of(UID.of(dataElement), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -380,15 +385,15 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsWithProgramTypeFilter()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00001");
+    DataElement dataElement = dataElement(UID.of("DATAEL00001"));
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
             .programType(ProgramType.WITH_REGISTRATION)
             .dataElementFilters(
-                Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
+                Map.of(UID.of(dataElement), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -399,15 +404,15 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsEqual()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00001");
+    DataElement dataElement = dataElement(UID.of("DATAEL00001"));
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
             .dataElementFilters(
                 Map.of(
-                    dataElement.getUid(),
+                    UID.of(dataElement),
                     List.of(new QueryFilter(QueryOperator.LIKE, "%value00001%"))))
             .build();
 
@@ -419,15 +424,15 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsIn()
       throws ForbiddenException, BadRequestException {
-    DataElement datael00001 = dataElement("DATAEL00001");
+    DataElement dataElement = dataElement(UID.of("DATAEL00001"));
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ", "TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(UID.of("nxP7UnKhomJ", "TvctPPhpD8z"))
+            .programStage(programStage)
             .dataElementFilters(
                 Map.of(
-                    datael00001.getUid(),
+                    UID.of(dataElement),
                     List.of(new QueryFilter(QueryOperator.IN, "value00001;value00002"))))
             .build();
 
@@ -439,18 +444,18 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsWithCategoryOptionSuperUser()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00001");
+    DataElement dataElement = dataElement(UID.of("DATAEL00001"));
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
-            .programUid(program.getUid())
-            .attributeCategoryCombo("bjDvmb4bfuf")
-            .attributeCategoryOptions(Set.of("xYerKDKCefk"))
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
+            .program(program)
+            .attributeCategoryCombo(UID.of("bjDvmb4bfuf"))
+            .attributeCategoryOptions(Set.of(UID.of("xYerKDKCefk")))
             .dataElementFilters(
                 Map.of(
-                    dataElement.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "value00001"))))
+                    UID.of(dataElement), List.of(new QueryFilter(QueryOperator.EQ, "value00001"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -462,10 +467,10 @@ class EventExporterTest extends TrackerTest {
   void shouldReturnEventsGivenCategoryOptionCombo() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
-            .attributeCategoryCombo("O4VaNks6tta")
-            .attributeCategoryOptions(Set.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
+            .attributeCategoryCombo(UID.of("O4VaNks6tta"))
+            .attributeCategoryOptions(UID.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -488,7 +493,7 @@ class EventExporterTest extends TrackerTest {
                                         e.getAttributeOptionCombo().getCategoryOptions().stream()
                                             .map(CategoryOption::getUid)
                                             .collect(Collectors.toSet()))))
-            .collect(Collectors.toList());
+            .toList();
     assertAll("all events should have the same category option combo and options", executables);
   }
 
@@ -498,10 +503,10 @@ class EventExporterTest extends TrackerTest {
     idSchemes.setCategoryOptionComboIdScheme("ATTRIBUTE:GOLswS44mh8");
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
             .idSchemes(idSchemes)
-            .events(Set.of("kWjSezkXHVp"))
+            .events(Set.of(UID.of("kWjSezkXHVp")))
             .build();
 
     IllegalStateException ex =
@@ -520,11 +525,11 @@ class EventExporterTest extends TrackerTest {
 
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
             .idSchemes(idSchemes)
-            .attributeCategoryCombo("O4VaNks6tta")
-            .attributeCategoryOptions(Set.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
+            .attributeCategoryCombo(UID.of("O4VaNks6tta"))
+            .attributeCategoryOptions(UID.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -558,7 +563,7 @@ class EventExporterTest extends TrackerTest {
                                         e.getAttributeOptionCombo().getCategoryOptions().stream()
                                             .map(CategoryOption::getUid)
                                             .collect(Collectors.toSet()))))
-            .collect(Collectors.toList());
+            .toList();
     assertAll("all events should have the same category option combo and options", executables);
   }
 
@@ -571,11 +576,11 @@ class EventExporterTest extends TrackerTest {
     idSchemes.setCategoryOptionComboIdScheme("ATTRIBUTE:j45AR9cBQKc");
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
             .idSchemes(idSchemes)
-            .attributeCategoryCombo("O4VaNks6tta")
-            .attributeCategoryOptions(Set.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
+            .attributeCategoryCombo(UID.of("O4VaNks6tta"))
+            .attributeCategoryOptions(UID.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -614,7 +619,7 @@ class EventExporterTest extends TrackerTest {
                                         e.getAttributeOptionCombo().getCategoryOptions().stream()
                                             .map(CategoryOption::getUid)
                                             .collect(Collectors.toSet()))))
-            .collect(Collectors.toList());
+            .toList();
     assertAll("all events should have the same category option combo and options", executables);
   }
 
@@ -623,18 +628,18 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     injectSecurityContextUser(
         createAndAddUser(false, "user", Set.of(orgUnit), Set.of(orgUnit), "F_EXPORT_DATA"));
-    DataElement dataElement = dataElement("DATAEL00002");
+    DataElement dataElement = dataElement(UID.of("DATAEL00002"));
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
-            .programUid(program.getUid())
-            .attributeCategoryCombo("bjDvmb4bfuf")
-            .attributeCategoryOptions(Set.of("xYerKDKCefk"))
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(programStage)
+            .program(program)
+            .attributeCategoryCombo(UID.of("bjDvmb4bfuf"))
+            .attributeCategoryOptions(Set.of(UID.of("xYerKDKCefk")))
             .dataElementFilters(
                 Map.of(
-                    dataElement.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "value00002"))))
+                    UID.of(dataElement), List.of(new QueryFilter(QueryOperator.EQ, "value00002"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -645,13 +650,13 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsWithOptionSetEqual()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00005");
+    DataElement dataElement = dataElement(UID.of("DATAEL00005"));
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
             .dataElementFilters(
-                Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "option1"))))
+                Map.of(UID.of(dataElement), List.of(new QueryFilter(QueryOperator.EQ, "option1"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -662,14 +667,14 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsWithOptionSetIn()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00005");
+    DataElement dataElement = dataElement(UID.of("DATAEL00005"));
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ", "TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(UID.of("nxP7UnKhomJ", "TvctPPhpD8z"))
+            .programStage(programStage)
             .dataElementFilters(
                 Map.of(
-                    dataElement.getUid(),
+                    UID.of(dataElement),
                     List.of(new QueryFilter(QueryOperator.IN, "option1;option2"))))
             .build();
 
@@ -681,13 +686,13 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByDataElementsWithOptionSetLike()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00005");
+    DataElement dataElement = dataElement(UID.of("DATAEL00005"));
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(programStage)
             .dataElementFilters(
-                Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "%opt%"))))
+                Map.of(UID.of(dataElement), List.of(new QueryFilter(QueryOperator.LIKE, "%opt%"))))
             .build();
 
     List<String> events = getEvents(params);
@@ -698,14 +703,14 @@ class EventExporterTest extends TrackerTest {
   @Test
   void testExportEventsWhenFilteringByNumericDataElements()
       throws ForbiddenException, BadRequestException {
-    DataElement dataElement = dataElement("DATAEL00006");
+    DataElement dataElement = dataElement(UID.of("DATAEL00006"));
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ", "TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(UID.of("nxP7UnKhomJ", "TvctPPhpD8z"))
+            .programStage(programStage)
             .dataElementFilters(
                 Map.of(
-                    dataElement.getUid(),
+                    UID.of(dataElement),
                     List.of(
                         new QueryFilter(QueryOperator.LT, "77"),
                         new QueryFilter(QueryOperator.GT, "8"))))
@@ -727,7 +732,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
@@ -743,7 +748,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
@@ -759,7 +764,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
@@ -775,7 +780,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
@@ -791,7 +796,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
@@ -807,7 +812,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
@@ -823,7 +828,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
@@ -839,7 +844,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
@@ -855,7 +860,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
@@ -871,7 +876,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
@@ -887,7 +892,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
@@ -898,14 +903,14 @@ class EventExporterTest extends TrackerTest {
           throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .attributeFilters(Map.of("notUpdated0", List.of()))
+            .orgUnit(orgUnit)
+            .attributeFilters(Map.of(UID.of("notUpdated0"), List.of()))
             .build();
 
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
@@ -914,10 +919,10 @@ class EventExporterTest extends TrackerTest {
   void testEnrollmentFilterNumericAttributes() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .attributeFilters(
                 Map.of(
-                    "numericAttr",
+                    UID.of("numericAttr"),
                     List.of(
                         new QueryFilter(QueryOperator.LT, "77"),
                         new QueryFilter(QueryOperator.GT, "8"))))
@@ -926,7 +931,7 @@ class EventExporterTest extends TrackerTest {
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
@@ -935,15 +940,17 @@ class EventExporterTest extends TrackerTest {
   void testEnrollmentFilterAttributes() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .attributeFilters(
-                Map.of("toUpdate000", List.of(new QueryFilter(QueryOperator.EQ, "summer day"))))
+                Map.of(
+                    UID.of("toUpdate000"),
+                    List.of(new QueryFilter(QueryOperator.EQ, "summer day"))))
             .build();
 
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("QS6w44flWAf"), trackedEntities);
   }
@@ -953,19 +960,19 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .attributeFilters(
                 Map.of(
-                    "toUpdate000",
+                    UID.of("toUpdate000"),
                     List.of(new QueryFilter(QueryOperator.EQ, "rainy day")),
-                    "notUpdated0",
+                    UID.of("notUpdated0"),
                     List.of(new QueryFilter(QueryOperator.EQ, "winter day"))))
             .build();
 
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
@@ -975,10 +982,10 @@ class EventExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .attributeFilters(
                 Map.of(
-                    "toUpdate000",
+                    UID.of("toUpdate000"),
                     List.of(
                         new QueryFilter(QueryOperator.LIKE, "day"),
                         new QueryFilter(QueryOperator.LIKE, "in"))))
@@ -987,7 +994,7 @@ class EventExporterTest extends TrackerTest {
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
@@ -1003,7 +1010,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
@@ -1052,13 +1059,49 @@ class EventExporterTest extends TrackerTest {
     assertContainsOnly(List.of("D9PbzJY8bJM", "pTzf9KYMk72"), events);
   }
 
-  private void assertNote(User expectedLastUpdatedBy, String expectedNote, Note actual) {
-    assertEquals(expectedNote, actual.getNoteText());
-    assertEquals(expectedLastUpdatedBy, actual.getLastUpdatedBy());
+  private static void assertNotes(List<Note> expected, List<Note> actual) {
+    assertContainsOnly(expected, actual);
+    Map<String, Note> expectedNotes =
+        expected.stream().collect(Collectors.toMap(Note::getUid, Function.identity()));
+    Map<String, Note> actualNotes =
+        actual.stream().collect(Collectors.toMap(Note::getUid, Function.identity()));
+    List<Executable> assertions =
+        expectedNotes.entrySet().stream()
+            .map(
+                entry ->
+                    (Executable)
+                        () -> {
+                          Note expectedNote = entry.getValue();
+                          Note actualNote = actualNotes.get(entry.getKey());
+                          assertAll(
+                              "note assertions " + expectedNote.getUid(),
+                              () ->
+                                  assertEquals(
+                                      expectedNote.getNoteText(),
+                                      actualNote.getNoteText(),
+                                      "noteText"),
+                              () ->
+                                  assertEquals(
+                                      expectedNote.getCreator(),
+                                      actualNote.getCreator(),
+                                      "creator"),
+                              () ->
+                                  assertEquals(
+                                      expectedNote.getCreated(),
+                                      actualNote.getCreated(),
+                                      "created"),
+                              () ->
+                                  assertEquals(
+                                      expectedNote.getLastUpdated(),
+                                      actualNote.getLastUpdated(),
+                                      "lastUpdated"));
+                        })
+            .toList();
+    assertAll("note assertions", assertions);
   }
 
-  private DataElement dataElement(String uid) {
-    return dataElementService.getDataElement(uid);
+  private DataElement dataElement(UID uid) {
+    return dataElementService.getDataElement(uid.getValue());
   }
 
   private <T extends IdentifiableObject> T get(Class<T> type, String uid) {
